@@ -20,6 +20,9 @@ git-annex (10.20240831) UNRELEASED; urgency=medium
     own purposes.
   * Support "balanced=" and "fullybalanced=" in preferred content expressions.
   * Added --rebalance option.
+  * maxsize: New command to tell git-annex how large the expected maximum
+    size of a repository is.
+  * vicfg: Include maxsize configuration.
 
  -- Joey Hess <id@joeyh.name>  Wed, 31 Jul 2024 15:52:03 -0400
 
